--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
     "cpx": "^1.5.0",
+    "gh-pages": "^6.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2"
   },
