--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.6",
     "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
     "cpx": "^1.5.0",
