--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-xhr-backend": "^3.2.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-i18next": "^13.2.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.0.7",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.6",
